--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -280,9 +280,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_DIN985.svg&amp;filetimestamp=20210815132141&amp;.html" class="mw-file-description"><img src="../File/Fasteners_DIN985.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10512</b> Sechskantmutter mit Feingewinde und Drehmomentbegrenzung (mit nichtmetallischem Einsatz).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10513</b> Sechskantmutter (Typ alle Metalle) mit Feingewinde und Drehmomentbegrenzung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_EN1661.svg&amp;filetimestamp=20160531200229&amp;.html" class="mw-file-description"><img src="../File/Fasteners_EN1661.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10663</b> Sechskantmutter mit Flansch und Feingewinde.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12125</b> Prevailing torque type hexagon nut with flange and fine pitch thread (with non-metallic insert).</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12125</b> Sechskantmutter mit Flansch und Feingewinde (mit nichtmetallischem Einsatz) und Drehmomentbegrenzung.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12126</b> Prevailing torque type all-metal hexagon nut with flange and fine pitch thread.</li></ul>
 </div>
@@ -405,13 +403,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085625
+Cached time: 20260118085702
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 0.549 seconds
-Preprocessor visited node count: 694/1000000
+CPU time usage: 0.513 seconds
+Real time usage: 0.893 seconds
+Preprocessor visited node count: 693/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -421,19 +419,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.970      1 -total
- 24.89%    5.220      1 Template:Fasteners_Tools_navi/de
- 23.66%    4.961      7 Template:PropertyData/de
- 13.22%    2.773      7 Template:Variable
- 12.02%    2.521      1 Template:VersionPlus/de
-  7.53%    1.578      1 Template:TRUE
-  6.72%    1.410      2 Template:Caption
-  6.32%    1.326      1 Template:TOCright
-  6.03%    1.265      7 Template:MenuCommand
-  5.72%    1.200      1 Template:Navigation_menu_2
+100.00%   27.782      1 -total
+ 28.88%    8.024      1 Template:Fasteners_Tools_navi/de
+ 22.82%    6.339      7 Template:PropertyData/de
+ 17.28%    4.800      1 Template:VersionPlus/de
+  9.85%    2.736      7 Template:Variable
+  7.48%    2.077      1 Template:TRUE
+  5.72%    1.588      1 Template:Navigation_menu_2
+  5.40%    1.500      2 Template:Caption
+  4.83%    1.341      1 Template:TOCright
+  4.32%    1.200      7 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085624 and revision id 1739958. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085701 and revision id 1739962. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
