--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -281,9 +281,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7719.svg&amp;filetimestamp=20240405162834&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7719.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10513</b> Sechskantmutter (Typ alle Metalle) mit Feingewinde und Drehmomentbegrenzung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_EN1661.svg&amp;filetimestamp=20160531200229&amp;.html" class="mw-file-description"><img src="../File/Fasteners_EN1661.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 10663</b> Sechskantmutter mit Flansch und Feingewinde.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7043.svg&amp;filetimestamp=20240405163104&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7043.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12125</b> Sechskantmutter mit Flansch und Feingewinde (mit nichtmetallischem Einsatz) und Drehmomentbegrenzung.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12126</b> Prevailing torque type all-metal hexagon nut with flange and fine pitch thread.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO7044.svg&amp;filetimestamp=20240405163240&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO7044.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 12126</b> Sechskantmutter (Typ alle Metalle) mit Flansch und Feingewinde und Drehmomentbegrenzung.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ISO21670.svg&amp;filetimestamp=20240405163747&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ISO21670.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ISO 21670</b> Sechskant-Schwei&szlig;muttern mit Flansch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_SAEJ483a1.svg&amp;filetimestamp=20230312162837&amp;.html" class="mw-file-description"><img src="../File/Fasteners_SAEJ483a1.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>SAE J483a 1</b> Niedrige Hutmutter.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_SAEJ483a2.svg&amp;filetimestamp=20230312162856&amp;.html" class="mw-file-description"><img src="../File/Fasteners_SAEJ483a2.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>SAE J483a 2</b> Hohe Hutmutter.</li></ul>
@@ -403,13 +401,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118085702
+Cached time: 20260118085742
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.513 seconds
-Real time usage: 0.893 seconds
-Preprocessor visited node count: 693/1000000
+CPU time usage: 0.479 seconds
+Real time usage: 0.870 seconds
+Preprocessor visited node count: 692/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -419,19 +417,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.782      1 -total
- 28.88%    8.024      1 Template:Fasteners_Tools_navi/de
- 22.82%    6.339      7 Template:PropertyData/de
- 17.28%    4.800      1 Template:VersionPlus/de
-  9.85%    2.736      7 Template:Variable
-  7.48%    2.077      1 Template:TRUE
-  5.72%    1.588      1 Template:Navigation_menu_2
-  5.40%    1.500      2 Template:Caption
-  4.83%    1.341      1 Template:TOCright
-  4.32%    1.200      7 Template:MenuCommand
+100.00%   32.315      1 -total
+ 22.78%    7.362      7 Template:PropertyData/de
+ 22.36%    7.224      1 Template:Fasteners_Tools_navi/de
+ 11.52%    3.723      2 Template:Caption
+ 11.22%    3.626      7 Template:Variable
+ 10.83%    3.499      7 Template:MenuCommand
+  8.54%    2.759      1 Template:TRUE
+  7.14%    2.309      1 Template:TOCright
+  7.05%    2.279      1 Template:Button
+  6.09%    1.967      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085701 and revision id 1739962. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085741 and revision id 1739964. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
