--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -13,8 +13,8 @@
 <li><a href="../ja/Std_Base.html" class="mw-pt-progress mw-pt-progress--low" title="&#20849;&#36890;&#12484;&#12540;&#12523; (6% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Std_Base.html" class="mw-pt-progress mw-pt-progress--med" title="&#54364;&#51456; &#44592;&#48152;(Std Base) (21% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Workbenches.html" title="Workbenches">Workbenches</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Assembly.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Workbenches.html" title="Workbenches">Pracovn&iacute; plochy</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Assembly.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Pracovn&iacute; plocha Assembly</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
@@ -142,15 +142,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090102
+Cached time: 20260118090109
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.259 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.162 seconds
 Preprocessor visited node count: 544/1000000
-Post&#8208;expand include size: 29060/2097152 bytes
-Template argument size: 11613/2097152 bytes
+Post&#8208;expand include size: 29096/2097152 bytes
+Template argument size: 11637/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -158,18 +158,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.775      1 -total
- 40.29%   20.053      1 Template:Userdocnavi/cs
- 37.54%   18.686      1 Template:Std_Base_navi/cs
- 23.46%   11.677      2 Template:Navigation_menu_2
-  4.88%    2.428      2 Template:Docnav
-  4.27%    2.125      8 Template:Version
-  3.95%    1.965      1 Template:StdMenu
-  3.84%    1.910      6 Template:VersionPlus
-  2.61%    1.298      1 Template:TOCright
+100.00%   21.585      1 -total
+ 39.61%    8.549      1 Template:Std_Base_navi/cs
+ 28.33%    6.114      2 Template:Navigation_menu_2
+ 16.62%    3.587      1 Template:Userdocnavi/cs
+ 10.82%    2.336      2 Template:Docnav
+  8.15%    1.758      1 Template:StdMenu
+  7.32%    1.579      6 Template:VersionPlus
+  7.03%    1.517      8 Template:Version
+  4.75%    1.026      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090102 and revision id 1739966. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090108 and revision id 1739968. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
