--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -23,7 +23,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p><b>Std Base</b> is not really a workbench, but rather a category of 'standard' commands and tools that can be used in all workbenches.
+<p><b>Std Base</b> nen&iacute; ve skute&#269;nosti pracovn&iacute; plochou, ale sp&iacute;&scaron;e kategori&iacute; &bdquo;standardn&iacute;ch&ldquo; p&#345;&iacute;kaz&#367; a n&aacute;stroj&#367;, kter&eacute; lze pou&#382;&iacute;t ve v&scaron;ech pracovn&iacute;ch ploch&aacute;ch.
 </p>
 <h2><span class="mw-headline" id="Tools">Tools</span></h2>
 <p>Most <b>Std Base</b> tools can be accessed from the <a href="../Standard_Menu.html" title="Standard Menu">standard menu</a>. Those that are only available via a toolbar or a context menu are listed under <a href="#Structure_toolbar">Structure toolbar</a> and <a href="#Additional_tools">Additional tools</a> below.
@@ -144,12 +144,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090216
+Cached time: 20260118090245
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.160 seconds
-Real time usage: 0.210 seconds
+CPU time usage: 0.137 seconds
+Real time usage: 0.198 seconds
 Preprocessor visited node count: 545/1000000
 Post&#8208;expand include size: 29096/2097152 bytes
 Template argument size: 11637/2097152 bytes
@@ -160,18 +160,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.035      1 -total
- 38.93%   14.808      1 Template:Std_Base_navi/cs
- 25.92%    9.857      2 Template:Navigation_menu_2
- 12.51%    4.759      1 Template:Userdocnavi/cs
- 11.01%    4.187      2 Template:Docnav
- 10.30%    3.917      6 Template:VersionPlus
-  9.04%    3.437      8 Template:Version
-  7.25%    2.756      1 Template:TOCright
-  6.85%    2.607      1 Template:StdMenu
+100.00%   22.123      1 -total
+ 40.63%    8.989      1 Template:Std_Base_navi/cs
+ 27.88%    6.167      2 Template:Navigation_menu_2
+ 19.55%    4.325      1 Template:Userdocnavi/cs
+  9.82%    2.173      2 Template:Docnav
+  7.11%    1.572      8 Template:Version
+  6.32%    1.399      6 Template:VersionPlus
+  4.84%    1.071      1 Template:TOCright
+  4.83%    1.068      1 Template:StdMenu
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090215 and revision id 1739971. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090245 and revision id 1739973. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
