--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Std_Base.html" class="mw-pt-progress mw-pt-progress--complete" title="Std: Narz&#281;dzia standardowe (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Std_Base.html" class="mw-pt-progress mw-pt-progress--med" title="Base Padr&atilde;o (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Std_Base.html" class="mw-pt-progress mw-pt-progress--low" title="Std Base (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Std_Base.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1099;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1099; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../Std_Base/zh-hans.html" class="mw-pt-progress mw-pt-progress--low" title="&#26631;&#20934;&#22522;&#30784; (6% translated)" lang="zh-Hans" dir="ltr">&#20013;&#25991;&#65288;&#31616;&#20307;&#65289;</a></li>
 <li><a href="../ja/Std_Base.html" class="mw-pt-progress mw-pt-progress--low" title="&#20849;&#36890;&#12484;&#12540;&#12523; (6% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -24,8 +24,9 @@
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p><b>Std Base</b> nen&iacute; ve skute&#269;nosti pracovn&iacute; plochou, ale sp&iacute;&scaron;e kategori&iacute; &bdquo;standardn&iacute;ch&ldquo; p&#345;&iacute;kaz&#367; a n&aacute;stroj&#367;, kter&eacute; lze pou&#382;&iacute;t ve v&scaron;ech pracovn&iacute;ch ploch&aacute;ch.
+</p><p><span id="Tools"></span>
 </p>
-<h2><span class="mw-headline" id="Tools">Tools</span></h2>
+<h2><span id="N.C3.A1stroje"></span><span class="mw-headline" id="N&aacute;stroje">N&aacute;stroje</span></h2>
 <p>Most <b>Std Base</b> tools can be accessed from the <a href="../Standard_Menu.html" title="Standard Menu">standard menu</a>. Those that are only available via a toolbar or a context menu are listed under <a href="#Structure_toolbar">Structure toolbar</a> and <a href="#Additional_tools">Additional tools</a> below.
 </p>
 <h3><span class="mw-headline" id="Standard_menu">Standard menu</span></h3>
@@ -144,13 +145,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090245
+Cached time: 20260118090252
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.198 seconds
-Preprocessor visited node count: 545/1000000
+CPU time usage: 0.159 seconds
+Real time usage: 0.248 seconds
+Preprocessor visited node count: 546/1000000
 Post&#8208;expand include size: 29096/2097152 bytes
 Template argument size: 11637/2097152 bytes
 Highest expansion depth: 5/100
@@ -160,18 +161,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.123      1 -total
- 40.63%    8.989      1 Template:Std_Base_navi/cs
- 27.88%    6.167      2 Template:Navigation_menu_2
- 19.55%    4.325      1 Template:Userdocnavi/cs
-  9.82%    2.173      2 Template:Docnav
-  7.11%    1.572      8 Template:Version
-  6.32%    1.399      6 Template:VersionPlus
-  4.84%    1.071      1 Template:TOCright
-  4.83%    1.068      1 Template:StdMenu
+100.00%   35.747      1 -total
+ 34.36%   12.282      1 Template:Std_Base_navi/cs
+ 23.01%    8.227      1 Template:Userdocnavi/cs
+ 19.57%    6.997      2 Template:Navigation_menu_2
+  9.59%    3.428      8 Template:Version
+  8.75%    3.129      1 Template:TOCright
+  7.98%    2.852      2 Template:Docnav
+  6.49%    2.319      1 Template:StdMenu
+  6.41%    2.290      6 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090245 and revision id 1739973. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090252 and revision id 1739975. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
