--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -56,7 +56,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumPlane.svg&amp;filetimestamp=20250110092548&amp;.html" class="mw-file-description"><img src="../File/Part_DatumPlane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumPlane.html" title="Part DatumPlane">Referen&#269;n&iacute; rovina</a>: Vytvo&#345;&iacute; objekt referen&#269;n&iacute; roviny, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumLine.svg&amp;filetimestamp=20250110092517&amp;.html" class="mw-file-description"><img src="../File/Part_DatumLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumLine.html" title="Part DatumLine">Referen&#269;n&iacute; linie</a>: Vytvo&#345;&iacute; objekt referen&#269;n&iacute; linky, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Part_DatumPoint.svg&amp;filetimestamp=20250110092559&amp;.html" class="mw-file-description"><img src="../File/Part_DatumPoint.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_DatumPoint.html" title="Part DatumPoint">Referen&#269;n&iacute; bod</a>: Vytvo&#345;&iacute; objekt referen&#269;n&iacute;ho bodu, kter&yacute; lze p&#345;ipojit k jin&yacute;m objekt&#367;m. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Std_Group.svg&amp;filetimestamp=20240528082502&amp;.html" class="mw-file-description"><img src="../File/Std_Group.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Group.html" title="Std Group">New Group</a>: Creates a new group.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Std_Group.svg&amp;filetimestamp=20240528082502&amp;.html" class="mw-file-description"><img src="../File/Std_Group.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Group.html" title="Std Group">Nov&aacute; skupina</a>: Vytvo&#345;&iacute; novou skupinu.</li></ul>
 <ul><li><span id="Std_LinkActions"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Link Actions:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMake.svg&amp;filetimestamp=20190903071604&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMake.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMake.html" title="Std LinkMake">Make Link</a>: Creates a link.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Std_LinkMakeRelative.svg&amp;filetimestamp=20200618144432&amp;.html" class="mw-file-description"><img src="../File/Std_LinkMakeRelative.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_LinkMakeRelative.html" title="Std LinkMakeRelative">Make Sub-Link</a>: Creates a sub-object or sub-element link.</li></ul></dd></dl>
@@ -147,12 +147,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118092623
+Cached time: 20260118092704
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.163 seconds
-Real time usage: 0.267 seconds
+CPU time usage: 0.178 seconds
+Real time usage: 0.257 seconds
 Preprocessor visited node count: 548/1000000
 Post&#8208;expand include size: 29112/2097152 bytes
 Template argument size: 11653/2097152 bytes
@@ -163,18 +163,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.099      1 -total
- 38.33%   12.304      1 Template:Std_Base_navi/cs
- 26.04%    8.358      1 Template:Userdocnavi/cs
- 25.85%    8.297      2 Template:Navigation_menu_2
- 11.17%    3.586      1 Template:StdMenu
-  7.45%    2.391      2 Template:Docnav
-  5.71%    1.832      6 Template:VersionPlus
-  4.56%    1.463      8 Template:Version
-  3.63%    1.165      1 Template:TOCright
+100.00%   27.026      1 -total
+ 44.88%   12.129      1 Template:Std_Base_navi/cs
+ 29.40%    7.946      2 Template:Navigation_menu_2
+ 17.50%    4.729      1 Template:Userdocnavi/cs
+ 10.65%    2.879      2 Template:Docnav
+  6.38%    1.725      1 Template:StdMenu
+  5.74%    1.552      1 Template:TOCright
+  5.40%    1.458      6 Template:VersionPlus
+  5.13%    1.386      8 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118092622 and revision id 1739997. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118092703 and revision id 1739999. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
