--- a/wiki/fr/Macro_FCCircularText.html
+++ b/wiki/fr/Macro_FCCircularText.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (92% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FCCircularText.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCCircularText (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Macro Testo Circolare (95% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makrodefinicja: FCCircularText (99% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -372,7 +372,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 		</li>
 </ul>
 </center>
-<div class="mw-translate-fuzzy">
 <ul><li>Par d&eacute;faut la section est cach&eacute;e. La fen&ecirc;tre est visible si le bouton radio <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=RadioButtonTrue.svg&amp;filetimestamp=20200323161550&amp;.html" class="mw-file-description"><img src="../File/RadioButtonTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Clock<span></span></span> est coch&eacute;</li></ul>
 <div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_16.png&amp;filetimestamp=20200601143709&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_16.png" decoding="async" width="492" height="452" class="mw-file-element" data-file-width="492" data-file-height="452"></a><figcaption></figcaption></figure>
@@ -384,7 +383,6 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/a25e802498bae695933
 <li>Les boutons <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mode Stand</span> ou <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Mode Flat</span>.</li></ol></li>
 <li>La section <b>Clock</b> est active.</li></ul>
 <div style="clear:both"></div>
-</div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
 <ul><li><b>Radius of support</b>&nbsp;: Si une valeur est entr&eacute;e, un support sera cr&eacute;&eacute; (defaut 0).</li>
 <li>Si <b>Support number face</b> est diff&eacute;rent de z&eacute;ro un support est cr&eacute;&eacute;. (Si <b>Extrude support </b>= z&eacute;ro une face est cr&eacute;&eacute;e).
@@ -941,35 +939,35 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215901
+Cached time: 20260118093025
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.527 seconds
-Real time usage: 1.515 seconds
-Preprocessor visited node count: 1631/1000000
+CPU time usage: 0.416 seconds
+Real time usage: 0.565 seconds
+Preprocessor visited node count: 1630/1000000
 Post&#8208;expand include size: 42133/2097152 bytes
 Template argument size: 13334/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 68338/5000000 bytes
+Unstrip post&#8208;expand size: 68342/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  933.159      1 -total
-  1.46%   13.607      5 Template:KEY
-  1.35%   12.635      1 Template:Caption
-  1.15%   10.727      1 Template:Draft_Tools_navi/fr
-  1.13%   10.548      6 Template:SpinBox
-  0.94%    8.748      3 Template:ColoredText
-  0.88%    8.214      7 Template:RadioButton
-  0.88%    8.210      1 Template:MenuCommand
-  0.78%    7.246      1 Template:Macro/fr
-  0.77%    7.197     10 Template:Code
+100.00%  343.948      1 -total
+  2.31%    7.929      1 Template:Draft_Tools_navi/fr
+  1.67%    5.752     10 Template:Code
+  1.60%    5.518      2 Template:Navigation_menu_2
+  1.57%    5.410      3 Template:ColoredText
+  1.25%    4.312      1 Template:Userdocnavi/fr
+  1.15%    3.945      7 Template:RadioButton
+  1.13%    3.895     10 Template:CheckBox
+  1.08%    3.720      1 Template:Macro/fr
+  0.93%    3.203      5 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39621-0!canonical and timestamp 20260117215859 and revision id 1739697. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39621-0!canonical and timestamp 20260118093025 and revision id 1740003. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
